<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/FirstFragment">

    <fragment
        android:id="@+id/FirstFragment"
        android:name="com.example.movieapp.FirstFragment"
        android:label="@string/first_fragment_label"
        tools:layout="@layout/fragment_first">

        <action
            android:id="@+id/action_FirstFragment_to_SecondFragment"
            app:destination="@id/SecondFragment" />

        <action
            android:id="@+id/action_FirstFragment_to_RandomFragment"
            app:destination="@id/RandomFragment" />

        <action
            android:id="@+id/action_FirstFragment_to_GenresFragment"
            app:destination="@id/GenresFragment" />
    </fragment>

    <fragment
        android:id="@+id/SecondFragment"
        android:name="com.example.movieapp.SecondFragment"
        android:label="@string/second_fragment_label"
        tools:layout="@layout/fragment_second">

        <action
            android:id="@+id/action_SecondFragment_to_FirstFragment"
            app:destination="@id/FirstFragment" />

        <action
            android:id="@+id/action_secondFragment_To_ThirdFragment"
            app:destination="@+id/ThirdFragment" />

        <action
            android:id="@+id/action_SecondFragment_to_GeneratedMovieFragment"
            app:destination="@id/GeneratedMovieFragment" />

        <action
            android:id="@+id/action_SecondFragment_to_RemoveMovieFragment"
            app:destination="@id/RemoveMovieFragment" />
    </fragment>

    <fragment
        android:id="@+id/ThirdFragment"
        android:name="com.example.movieapp.ThirdFragment"
        android:label="@string/third_fragment_label"
        tools:layout="@layout/fragment_third">

        <action
            android:id="@+id/action_FirstFragment_to_SecondFragment"
            app:destination="@id/SecondFragment" />
    </fragment>

    <fragment
        android:id="@+id/RandomFragment"
        android:name="com.example.movieapp.RandomFragment"
        android:label="@string/random_fragment_label"
        tools:layout="@layout/fragment_random">

        <action
            android:id="@+id/action_FirstFragment_to_SecondFragment"
            app:destination="@id/RandomFragment" />
    </fragment>

    <fragment
        android:id="@+id/GenresFragment"
        android:name="com.example.movieapp.GenresFragment"
        android:label="@string/genres_fragment_label"
        tools:layout="@layout/fragment_genres">

        <action
            android:id="@+id/action_FirstFragment_to_SecondFragment"
            app:destination="@id/GenresFragment" />
    </fragment>

    <fragment
        android:id="@+id/GeneratedMovieFragment"
        android:name="com.example.movieapp.GeneratedMovieFragment"
        android:label="@string/generated_movie_fragment_label"
        tools:layout="@layout/fragment_generated_movie">
    </fragment>

    <fragment
        android:id="@+id/RemoveMovieFragment"
        android:name="com.example.movieapp.RemoveMovieFragment"
        android:label="@string/remove_movie_fragment_label"
        tools:layout="@layout/fragment_remove_movie">
    </fragment>

</navigation>